version/0.17/_sources/api/solver/_autosummary/settings/interface_child_1.rst.txt
:orphan:

.. _interface_child_1:

interface_child
===============

.. autoclass:: ansys.fluent.core.solver.settings_232.interface_child_1.interface_child
    :show-inheritance:

.. rubric:: Attributes

========================================================================   =====================================================================================

Attribute                                                                                                                                                Summary

========================================================================   =====================================================================================
:ref:`interface_names <interface_names>`                                                                                     Select interface zones for pairing.

:ref:`zone_names <zone_names>`                                                                                   Select wall and/or interface zones for pairing.

:ref:`zone1 <zone1>`                                                                                        Select first interface defining this mesh-interface.

:ref:`zone2 <zone2>`                                                                                       Select second interface defining this mesh-interface.

:ref:`new_zones <new_zones>`                                                                                Select interface zones defining this mesh-interface.

:ref:`mapped <mapped>`                                                                                                     Indicate if mesh-interface is mapped.

:ref:`enable_local_mapped_tolerance <enable_local_mapped_tolerance>`                                             Enable local tolerance for this mesh interface.

:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`             Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`local_relative_mapped_tolerance <local_relative_mapped_tolerance>`                                                'local_relative_mapped_tolerance' child.

:ref:`local_absolute_mapped_tolerance <local_absolute_mapped_tolerance>`                                                'local_absolute_mapped_tolerance' child.

:ref:`periodic <periodic_1>`                                                                      Indicate if mesh-interface is adjacent to periodic boundaries.

:ref:`turbo <turbo>`                                                                                                           Create a general turbo interface.

:ref:`pitch_change_types <pitch_change_types>`                                                                                       'pitch_change_types' child.

:ref:`mixing_plane <mixing_plane>`                                                                                    If you want to use mixing plane mechanism.

:ref:`turbo_non_overlap <turbo_non_overlap>`                                                                    Create non-overlapping walls for gti interfaces.

:ref:`coupled <coupled>`                                                                                                  Indicate if mesh-interface is coupled.

:ref:`matching <matching>`                                                                                               Indicate if mesh-interface is matching.

:ref:`static <static>`                                                                                                     Indicate if mesh-interface is static.

:ref:`ignore_diff <ignore_diff>`                                                                                                            'ignore_diff' child.

========================================================================   =====================================================================================

.. rubric:: Included in:

==============================   ======================

Parent                                          Summary

==============================   ======================
:ref:`interface <interface_1>`       'interface' child.

==============================   ======================

