version/0.21/_sources/api/solver/_autosummary/settings/interface_child_1.rst.txt
:orphan:

.. _interface_child_1:

interface_child
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.interface_child_1.interface_child
    :show-inheritance:

.. rubric:: Attributes

========================================================================   =====================================================================================

Attribute                                                                                                                                                Summary

========================================================================   =====================================================================================
:ref:`name <name_2>`                                                                                                    Enter a prefix for mesh interface names.

:ref:`zone1 <zone1_1>`                                                                                                   First interface of this mesh-interface.

:ref:`zone2 <zone2_1>`                                                                                                  Second interface of this mesh-interface.

:ref:`zone1_list <zone1_list_1>`                                                                                   First interface defining this mesh-interface.

:ref:`zone2_list <zone2_list_1>`                                                                                  Second interface defining this mesh-interface.

:ref:`mapped <mapped>`                                                                                                     Indicate if mesh-interface is mapped.

:ref:`enable_local_mapped_tolerance <enable_local_mapped_tolerance>`                                             Enable local tolerance for this mesh interface.

:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`             Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`local_relative_mapped_tolerance <local_relative_mapped_tolerance>`                                                                              Tolerance.

:ref:`local_absolute_mapped_tolerance <local_absolute_mapped_tolerance>`                                                                              Tolerance.

:ref:`periodic <periodic_2>`                                                                      Indicate if mesh-interface is adjacent to periodic boundaries.

:ref:`turbo <turbo>`                                                                                                           Create a general turbo interface.

:ref:`turbo_choice <turbo_choice>`                                                                                      Enter your choice of pitch-change types.

:ref:`mixing_plane <mixing_plane>`                                                                                    If you want to use mixing plane mechanism.

:ref:`turbo_non_overlap <turbo_non_overlap>`                                                                    Create non-overlapping walls for gti interfaces.

:ref:`coupled <coupled_1>`                                                                                                Indicate if mesh-interface is coupled.

:ref:`matching <matching>`                                                                                               Indicate if mesh-interface is matching.

:ref:`static <static_1>`                                                                                                   Indicate if mesh-interface is static.

========================================================================   =====================================================================================

.. rubric:: Included in:

==============================   ===========================

Parent                                               Summary

==============================   ===========================
:ref:`interface <interface_2>`       Create mesh interfaces.

==============================   ===========================

